# Kindle_pdf_translation

./: .env.example  .eslintignore  .gitignore  AGENTS.md  BOOK_TRANSLATOR_PROJECT.md  CLAUDE.md  DEPLOYMENT_PLAN.md  Dockerfile  Makefile  README.md  Software_Testing_2025_Portfolio.md  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vercel.json
backend/alembic/: script.py.mako
backend/alembic/versions/: .gitkeep
backend/api/: index.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  routes.py
backend/app/db/: crud.py  models.py
backend/app/pipeline/: __init__.py  build_epub.py  extract.py  flashcards.py  translate.py
backend/app/providers/: __init__.py  base.py  hf_inference_provider.py  hf_stub_provider.py  openai_provider.py
backend/app/routers/: __init__.py  events.py
backend/app/services/: chaptering.py  epub.py  normalize.py
backend/app/storage/: __init__.py  local.py  s3_compat.py
backend/app/utils/: __init__.py  ids.py  locks.py  logging.py  telemetry.py  tokenizers.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_config.py  test_db.py  test_main.py  test_providers.py  test_routes.py  test_storage.py  test_telemetry.py  test_tokenizers.py  test_utils.py
backend/tests/accuracy/: test_translation_accuracy.py
backend/tests/pipeline/: test_build_epub.py  test_extract.py  test_extract_more.py  test_flashcards.py  test_pipeline.py  test_pipeline_run.py  test_translate.py
(+126 files in other folders)
