[project]
name = "book-translator-backend"
version = "0.1.0"
description = "Lean FastAPI backend for the Book Translator MVP."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "aiosqlite",
  "boto3",
  "pymupdf",
  "jinja2",
  "ebooklib",
  "wordfreq",
  "httpx",
  "python-dotenv",
  "openai>=1.40",
  "watchfiles",
  "python-multipart",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
